--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.8.3",
+    "@astrojs/sitemap": "^3.1.6",
     "@astrojs/starlight": "^0.22.0",
     "@fontsource-variable/space-grotesk": "^5.0.18",
     "@fontsource/space-mono": "^5.0.20",
